// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtnToggleDoneStatus function toggleStatus renders properly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BtnToggleDoneStatus
    id={1}
    toggleDoneStatus={
      [MockFunction] {
        "calls": Array [
          Array [
            1,
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "arrowPointAtCenter": false,
      "autoAdjustOverflow": true,
      "children": <Button
        block={false}
        ghost={false}
        icon="clock-circle"
        loading={false}
        onClick={[Function]}
        type="primary"
      />,
      "mouseEnterDelay": 0.1,
      "mouseLeaveDelay": 0.1,
      "placement": "top",
      "title": "Mark as  done",
      "transitionName": "zoom-big-fast",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "block": false,
        "ghost": false,
        "icon": "clock-circle",
        "loading": false,
        "onClick": [Function],
        "type": "primary",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowPointAtCenter": false,
        "autoAdjustOverflow": true,
        "children": <Button
          block={false}
          ghost={false}
          icon="clock-circle"
          loading={false}
          onClick={[Function]}
          type="primary"
        />,
        "mouseEnterDelay": 0.1,
        "mouseLeaveDelay": 0.1,
        "placement": "top",
        "title": "Mark as  done",
        "transitionName": "zoom-big-fast",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "block": false,
          "ghost": false,
          "icon": "clock-circle",
          "loading": false,
          "onClick": [Function],
          "type": "primary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BtnToggleDoneStatus initial renders properly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BtnToggleDoneStatus
    id={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "arrowPointAtCenter": false,
      "autoAdjustOverflow": true,
      "children": <Button
        block={false}
        ghost={false}
        icon="clock-circle"
        loading={false}
        onClick={[Function]}
        type="primary"
      />,
      "mouseEnterDelay": 0.1,
      "mouseLeaveDelay": 0.1,
      "placement": "top",
      "title": "Mark as  done",
      "transitionName": "zoom-big-fast",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "block": false,
        "ghost": false,
        "icon": "clock-circle",
        "loading": false,
        "onClick": [Function],
        "type": "primary",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowPointAtCenter": false,
        "autoAdjustOverflow": true,
        "children": <Button
          block={false}
          ghost={false}
          icon="clock-circle"
          loading={false}
          onClick={[Function]}
          type="primary"
        />,
        "mouseEnterDelay": 0.1,
        "mouseLeaveDelay": 0.1,
        "placement": "top",
        "title": "Mark as  done",
        "transitionName": "zoom-big-fast",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "block": false,
          "ghost": false,
          "icon": "clock-circle",
          "loading": false,
          "onClick": [Function],
          "type": "primary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
